# Lab3

./: CMakeLists.txt  GnomSorted.c  GnomSorted.h  README.md  Tools.c  Tools.h  gnomsorted_final.ods  house.c  housecont.c  housecont.h  main.c  quick_final.ods
cfiles/: Sorting.c  Tools.c  house.c  housecont.c  main.c
headers/: Sorting.h  Tools.h  house.h  housecont.h
